Prevent double scrollbar issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3743,7 +3743,7 @@ section.disqus
     padding: 0;
     margin: 0;
     top: auto !important;
-    overflow-y: hidden !important;
+    overflow-y: hidden;
     padding: 5px;
     background-color: #EC4936;
     -webkit-transition: top 0.2s ease-in-out;
@@ -3768,7 +3768,6 @@ section.disqus
     -webkit-border-radius: none;
     border-radius: none;
     box-sizing: border-box;
-    overflow-y: auto !important;
   }
   
   article.tutorial .outline_nav_toggle.activated  ul {
